--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,7 +14,7 @@ variables:
 
 steps:
 - script: dotnet build --configuration $(buildConfiguration)
-  displayName: 'dotnet build $(buildConfiguration'
+  displayName: 'dotnet build $(buildConfiguration)'
 
 - task: NuGetCommand@2
   inputs:
